@@ -1,3 +1,8 @@
+2013/11/15 (version 1.16)
+
+- Calling bugwarrior from menu no longer blocks the UI.
+
+
 2013/11/12 (version 1.15)
 
 - Active tasks are shown with bold font in the search dialog.
